Imported Upstream version 2.0.13-stable

--- a/README
+++ b/README
@@ -85,9 +85,11 @@ fixing bugs:
   Tomash Brechko
   Kelly Brock
   Ralph Castain
+  Lawnstein Chan
   Shuo Chen
   Ka-Hing Cheung
   Andrew Danforth
+  Ed Day
   Christopher Davis
   Mike Davis
   Mihai Draghicioiu
