--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libevent (2.0.18-stable-1) unstable; urgency=low
+
+  * [d094fba3] Imported Upstream version 2.0.18-stable
+  * [6717e7ac] correct vcs-browse link
+
+ -- Leo Costela <costela@debian.org>  Fri, 30 Mar 2012 16:24:30 +0200
+
 libevent (2.0.17-stable-1) unstable; urgency=low
 
   * [98fed68d] Imported Upstream version 2.0.17-stable
