--- a/README
+++ b/README
@@ -47,7 +47,7 @@ The configure script also supports the following flags:
 2. USEFUL LINKS:
 
 For the latest released version of Libevent, see the official website at
-http://monkey.org/~provos/libevent/ .
+http://libevent.org/ .
 
 There's a pretty good work-in-progress manual up at
    http://www.wangafu.net/~nickm/libevent-book/ .
@@ -108,6 +108,7 @@ fixing bugs:
   Greg Hazel
   Michael Herf
   Sebastian Hahn
+  Savg He
   Mark Heily
   Greg Hewgill
   Aaron Hopkins
@@ -162,6 +163,7 @@ fixing bugs:
   Peter Rosin
   Maseeb Abdul Qadir
   Wang Qin
+  Alex S
   Hanna Schroeter
   Ralf Schmitt
   Mike Smellie
@@ -184,5 +186,6 @@ fixing bugs:
   Taral
   propanbutan
   mmadia
+
 
 If we have forgotten your name, please contact us.
