--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libevent (1:2.1~azat6.4) natty; urgency=low
+
+  * Update from pass-http-client-error-codes-to-callback
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Thu, 21 Mar 2013 17:40:48 +0400
+
 libevent (1:2.1~azat6.3) natty; urgency=low
 
   * Merge pass-http-client-error-codes-to-callback
