--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libevent (3:2.1.3~azat2) oneiric; urgency=low
+
+  * Bump version (fix memory leak)
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Thu, 03 Oct 2013 23:02:13 +0400
+
 libevent (3:2.1.3~azat1) oneiric; urgency=low
 
   * Update shlibs 
