--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libevent (3:2.1.3~azat3) oneiric; urgency=low
+
+  * Fix freeing of conn_address.
+  * Merge fork-upstream/evhttp_connection_get_addr-v2
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Mon, 07 Oct 2013 12:35:21 +0400
+
 libevent (3:2.1.3~azat2) oneiric; urgency=low
 
   * Bump version (fix memory leak)
