--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libevent (3:2.1.3~azat4) oneiric; urgency=low
+
+  * Fix merge strage. 
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Mon, 07 Oct 2013 13:53:48 +0400
+
 libevent (3:2.1.3~azat3) oneiric; urgency=low
 
   * Fix freeing of conn_address.
