--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libevent (3:2.1.3~azat5) oneiric; urgency=low
+
+  * Merge last fixes from evhttp_connection_get_addr-v2
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Mon, 14 Oct 2013 21:37:56 +0400
+
 libevent (3:2.1.3~azat4) oneiric; urgency=low
 
   * Fix merge strage. 
