--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libevent (3:2.1.3~azat7) oneiric; urgency=medium
+
+  * Update from upstream
+  * merge change-sa-flags
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Wed, 29 Jan 2014 19:34:13 +0400
+
 libevent (3:2.1.3~azat5) oneiric; urgency=low
 
   * Merge last fixes from evhttp_connection_get_addr-v2
