Start working on next upload

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libevent (2.1.4~alpha-0.1) UNRELEASED; urgency=low
+
+  * Non-maintainer upload.
+  * New upstream alpha release
+
+ -- Balint Reczey <balint@balintreczey.hu>  Thu, 27 Mar 2014 19:34:52 +0100
+
 libevent (2.0.21-stable-1) unstable; urgency=low
 
   * [dd23c3ce] Imported Upstream version 2.0.21-stable
