--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+libevent (2.1.4-alpha-dev~azat) oneiric; urgency=medium
+
+  * git munn github/master
+  * git munn github-azat-non-deb/tests-disable-when-inactive-v5
+  * git munn github-azat-non-deb/dns-fail-disable-when-inactive-fix-v2
+  * git munn github-azat-non-deb/disable-probing-with-disable-when-inactive-v2
+  * git munn github-azat-non-deb/http-forward-family-to-bufferevent
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Tue, 15 Apr 2014 15:10:55 +0400
+
 libevent (3:2.1.3~azat9) oneiric; urgency=medium
 
   * Merge "git://github.com/azat/libevent.git signals-enhancements"
