--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
-libevent (2.1.4~alpha-0.1) UNRELEASED; urgency=low
+libevent (2.1.4~alpha-0.1) experimental; urgency=low
 
   * Non-maintainer upload.
   * New upstream alpha release
+  * Drop build_with_no_undefined.patch since it has been integrated upstream
+  * Bump .so versions and related versions in package names
+  * Don't pass --no-undefined and --no-add-needed to ld
+  * Enable regression tests
 
  -- Balint Reczey <balint@balintreczey.hu>  Thu, 27 Mar 2014 19:34:52 +0100
 
