--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libevent (2.1.4~alpha-0.2) experimental; urgency=medium
+
+  * Non-maintainer upload.
+  * Hard reset (delete all except debian/)
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Sat, 27 Sep 2014 22:26:35 +0400
+
 libevent (2.1.4~alpha-0.1) experimental; urgency=low
 
   * Non-maintainer upload.
