--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libevent (2.1.4-alpha~azat) experimental; urgency=medium
+
+  * Bump version.
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Mon, 29 Sep 2014 16:53:59 +0400
+
 libevent (2.1.4~alpha-0.2) experimental; urgency=medium
 
   * Non-maintainer upload.
