--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libevent (2.1.4-alpha~azat) experimental; urgency=medium
+libevent (2.1.4-alpha~azat1) experimental; urgency=medium
 
   * Bump version.
 
