--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libevent (2.1.4-alpha~azat6) experimental; urgency=medium
+
+  * Import up to 2b41efc5c3d0 ("http: reset connection before instlaling
+    retry timer") by Azat Khuzhin (a3at.mail@gmail.com) (from
+    git://github.com/azat/libevent.git azat/http-retry-fixes)
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Mon, 29 Sep 2014 16:58:44 +0400
+
 libevent (2.1.4-alpha~azat5) experimental; urgency=medium
 
   * Import up to 3da84c2949cc ("bufferevent_openssl: reset fd_is_set
