--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libevent (2.1.4-alpha~azat2) experimental; urgency=medium
+
+  * Import up to 6dba169 ("Merge pull request #179 from pysiak/master")
+    by Nick Mathewson (nickm@freehaven.net) (from
+    git://github.com/libevent/libevent.git main/master)
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Sat, 08 Nov 2014 16:48:27 +0300
+
 libevent (2.1.4-alpha~azat1) experimental; urgency=medium
 
   * Bump version.
