--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libevent (2.1.4-alpha~azat8-83f9b781) experimental; urgency=medium
+
+  * Release
+  * Bump version
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Wed, 12 Nov 2014 20:29:25 +0300
+
 libevent (2.1.4-alpha~azat7) experimental; urgency=medium
 
   * Import up to 718d245 ("http: use IP address that we got before (if
