--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libevent (2.1.5-alpha~azat2) experimental; urgency=medium
+
+  * Import up to 2828bdb ("Always define missing TAILQ functions from
+    sys/queue.h") by Christopher Wiley (wiley@google.com) (from
+    git://github.com/libevent/libevent.git main/master)
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Fri, 28 Aug 2015 13:38:31 +0300
+
 libevent (2.1.5-alpha~azat1) experimental; urgency=medium
 
   * Bump version.
