--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libevent (2.1.5-alpha~azat3-85cc0a21) experimental; urgency=medium
+
+  * Release
+  * Bump version
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Fri, 04 Sep 2015 08:59:58 +0300
+
 libevent (2.1.5-alpha~azat2) experimental; urgency=medium
 
   * Import up to cf2cf2a ("test: run regress with EVENT_DEBUG_MODE=1 and
