--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libevent (2.1.5-alpha~azat2) experimental; urgency=medium
+
+  * Import up to da0ea7a ("test/ssl: cover busy-loop (i.e. {read,write}-
+    blocked-on-{write,read} stuff)") by Azat Khuzhin
+    (a3at.mail@gmail.com) (from git://github.com/libevent/libevent.git
+    main/master)
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Wed, 18 Nov 2015 15:46:49 +0300
+
 libevent (2.1.5-alpha~azat1) experimental; urgency=medium
 
   * Bump version.
