--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libevent (1:2.1.7-alpha~azat2) experimental; urgency=medium
+
+  * Import up to 26f416c1 ("test/http: turn off some tests that based on
+    backlog filling (falky)") by Azat Khuzhin (a3at.mail@gmail.com)
+    (from git://github.com/libevent/libevent.git main/master)
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Fri, 20 Jan 2017 19:58:04 +0300
+
 libevent (1:2.1.7-alpha~azat1) experimental; urgency=medium
 
   * Bump version.
