--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libevent (1:2.1.7-alpha~azat4-release-2.1.7-rc-59-g1adb69571) experimental; urgency=medium
+
+  * Release
+  * Bump version
+
+ -- Azat Khuzhin <a3at.mail@gmail.com>  Fri, 20 Jan 2017 21:12:24 +0300
+
 libevent (1:2.1.7-alpha~azat3) experimental; urgency=medium
 
   * Import up to d6bafbbe ("test/dns: replace servname since solaris
